--- a/src/styles.css
+++ b/src/styles.css
@@ -80,12 +80,16 @@ html, body {
 .headline {
   position: absolute;
   text-transform: uppercase;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
 }
 
 
 
 .selected {
-  background-color: red;
+  background-color: blue;
   color: white;
 }
 
