Menus and editing docs
Menuing for edit and playback moving closer to final plan.  No file requester for images yet, no image overlay type yet, but better separation between editing the overlay and the container.

--- a/src/styles.css
+++ b/src/styles.css
@@ -84,9 +84,14 @@ html, body {
   margin: 0;
   padding: 0;
   line-height: 1;
+  overflow: hidden;
 }
 
-
+.editButton {
+  display: block;
+  padding: 8px;
+  margin-bottom: 5px;
+}
 
 .selected {
   background-color: blue;
