--- a/src/styles.css
+++ b/src/styles.css
@@ -52,7 +52,6 @@ html, body {
   top: 0;
   right: 0;
   padding-left: 1vw; 
-  z-index: 1;
 }
 
 
@@ -62,17 +61,15 @@ html, body {
   top: 0;
   right: 0;
   padding-left: 1vw; 
-  height: 100vh;
-  z-index: 0;
-  background-color: rgb(220, 0, 0); /* Replace with your desired background color */   
+  background-color: rgb(0, 0, 220); /* Replace with your desired background color */   
 }
 
 .editmode-div {
-    background-color: rgb(220, 0, 0); /* Replace with your desired background color */   
+    background-color: rgb(0, 220, 0); /* Replace with your desired background color */   
 }
 
 .saveOrExitContainer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
 }
@@ -104,13 +101,17 @@ html, body {
 }
 
 .selectedOverlay {
-  border-style: solid;
-  border-color: rgb(255, 0, 0);
-  border-width: 1px;
+  background-color: rgb(0 0 0 / 50%);
+}
+
+.hideMe {
+  visibility: hidden;
 }
 
 .showBox {
-  background-color: rgb(0 0 0 / 50%);
+  border-style: solid;
+  border-color: rgb(255, 0, 0);
+  border-width: 1px;
 }
 
 .editButton {
