--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,18 @@ html, body {
     background-color: rgb(220, 0, 0); /* Replace with your desired background color */   
 }
 
+.stubContainer {
+  position: fixed;
+  display: flex;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vh;
+  object-fit: cover;
+  object-position: left;
+
+}
+
 .saveOrExitContainer {
   position: absolute;
   bottom: 0;
